Finished on mobile, a few issue to solve on browser

--- a/static/styles.css
+++ b/static/styles.css
@@ -220,9 +220,6 @@ body {
     color: #fff;
 }
 
-.config-item:hover {
-    background-color: #ddd;
-}
 
 /* Auto-submit Box */
 #auto-submit-config {
